fixed jumping div in lin Items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -129,6 +129,7 @@ $spacing-10: 80px;
         padding-bottom: 0px;
         div{
             border-bottom: none;
+            padding-bottom: 3px;
         }
     }
     div{
